Remade my style sheet in the web folder. Now it's working

--- a/web/HW3style.css
+++ b/web/HW3style.css
@@ -1,1 +1,26 @@
-body{color: white; background-color: #052b50;}
+body{font-family: tahoma; color: white; background-color: #052b50;}
+h1{text-align: center}
+table{border: 4px solid gray; padding: 5px}
+td{padding-bottom: 2px}
+tr:nth-child(even) {background-color: #000633;}
+a{color: orangered;}
+
+.center{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#buttonholder{
+    text-align: center;
+}
+
+align{
+    	text-align:left;
+	background-color: white;
+	color: black;
+	border-style: solid;
+	border-color: black;
+	border-width: 3px;
+	padding: 10px;
+}
